sampler/chain/projects/MPAndroidChart/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/jobs/ZoomJob.java:85: error: [NullAway] (INDEX= 132) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return new ZoomJob(null, 0, 0, 0, 0, null, null, null);
                           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/jobs/AnimatedMoveViewJob.java:63: error: [NullAway] (INDEX= 126) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        return new AnimatedMoveViewJob(null,0,0,null,null,0,0,0);
                                                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/RadarData.java:20: error: [NullAway] (INDEX= 116) (Covered) initializer method does not guarantee @NonNull field mLabels (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RadarData() {
           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/jobs/MoveViewJob.java:18: error: [NullAway] (INDEX= 136) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        pool = ObjectPool.create(2, new MoveViewJob(null,0,0,null,null));
                                                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/MPAndroidChart/MPChartLib/src/main/java/com/github/mikephil/charting/data/ChartData.java:367: error: [NullAway] (INDEX= 30) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^

	(see http://t.uber.com/nullaway )
